# RAG

./: .env.example  .gitignore  README.md  pyproject.toml
simple_rag/: download.py  helpers.py  ingest.py  retrieve.py  weblinks.yaml
