[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic-ai>=0.2.4",
    "duckduckgo-search>=8.0.1",
    "fastmcp>=2.2.2",
    "gitpython>=3.1.44",
    "google-adk[vertexai]>=0.1.0",
    "google-genai>=1.11.0",
    "ipykernel>=6.29.5",
    "lancedb>=0.22.0",
    "langchain>=0.3.25",
    "langchain-community",
    "langchain-text-splitters>=0.3.8",
    "markdown>=3.8",
    "pinecone>=6.0.2",
    "sqlmodel>=0.0.24",
    "sqlparse>=0.5.3",
    "streamlit>=1.44.1",
    "tabulate>=0.9.0",
    "unstructured>=0.17.2",
    "pandas>=2.2.3",
]
